# Project

./: .gitignore  .replit  Dockerfile  README.md  dev-setup.sh  main.py  pyproject.toml  replit.md  requirements-dev.txt
.devcontainer/: devcontainer.json
app/: __init__.py
app/api/routes/: data_analysis.py  evaluation.py  reports.py  training.py  upload.py
app/core/: config.py  exceptions.py
app/models/: __init__.py  schemas.py
app/services/: comprehensive_visualization_service.py  data_service.py  ml_service.py  preprocessing_service.py  report_service.py  visualization_service.py
app/utils/: file_utils.py  ml_utils.py
frontend/: .env.example  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: DataPreviewTable.tsx  EvaluationDashboard.tsx  Layout.tsx  MetricsCards.tsx  ModelComparisonTable.tsx  ReportsPanel.tsx  StepperProgress.tsx  TrainingProgress.tsx  UploadZone.tsx  VisualizationPanel.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
static/: automl-app.html  enhanced-automl-app.html  index.html
